--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <div class="login-container">
         <div class="login-header">
             <div class="logo-container">
-                <img src="CitLogo.png" alt="College Logo" class="logo">
+                <img src="CIT.png" alt="College Logo" class="logo">
             </div>
             <h1>Welcome Back</h1>
             <p>Please sign in to your account</p>
