--- a/index.html
+++ b/index.html
@@ -3,52 +3,152 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Search Box Assignment</title>
+  <title>Login Page</title>
   <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      min-height: 100vh;
       display: flex;
-      height: 100vh;
-      justify-content: center;
       align-items: center;
-      background: #f5f5f5;
-      font-family: Arial, sans-serif;
+      justify-content: center;
     }
-
-    form {
+    .login-container {
       background: white;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      padding: 40px;
+      border-radius: 10px;
+      box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1);
+      width: 100%;
+      max-width: 400px;
+      transform: translateY(0);
+      transition: transform 0.3s ease;
     }
-
-    input[type="text"] {
-      padding: 10px;
-      font-size: 16px;
-      border: 2px solid #ddd;
+    .login-container:hover { transform: translateY(-5px); }
+    .login-header { text-align: center; margin-bottom: 30px; }
+    .logo-container { margin-bottom: 20px; }
+    .logo {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      object-fit: cover;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s ease;
+    }
+    .logo:hover { transform: scale(1.05); }
+    .login-header h1 { color: #333; font-size: 28px; margin-bottom: 10px; }
+    .login-header p { color: #666; font-size: 14px; }
+    .form-group { margin-bottom: 20px; }
+    .form-group label { display: block; margin-bottom: 5px; color: #555; font-weight: 500; }
+    .form-group input {
+      width: 100%; padding: 12px;
+      border: 2px solid #e1e1e1;
       border-radius: 5px;
-      width: 250px;
-    }
-
-    button {
-      padding: 10px 15px;
       font-size: 16px;
-      border: none;
-      background: #667eea;
-      color: white;
-      border-radius: 5px;
-      margin-left: 8px;
-      cursor: pointer;
+      transition: border-color 0.3s ease;
     }
-
-    button:hover {
-      background: #5a67d8;
+    .form-group input:focus { outline: none; border-color: #667eea; }
+    .login-options {
+      display: flex; justify-content: space-between;
+      align-items: center; margin-bottom: 25px;
+    }
+    .remember-me { display: flex; align-items: center; gap: 8px; }
+    .remember-me input[type="checkbox"] { width: auto; }
+    .forgot-password {
+      color: #667eea; text-decoration: none; font-size: 14px;
+    }
+    .forgot-password:hover { text-decoration: underline; }
+    .login-btn {
+      width: 100%;
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      color: white; padding: 12px;
+      border: none; border-radius: 5px;
+      font-size: 16px; cursor: pointer;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+    }
+    .login-btn:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+    }
+    .signup-link { text-align: center; margin-top: 20px; color: #666; }
+    .signup-link a { color: #667eea; text-decoration: none; }
+    .signup-link a:hover { text-decoration: underline; }
+    .message {
+      padding: 10px; margin-bottom: 20px;
+      border-radius: 5px; display: none;
+    }
+    .message.success {
+      background-color: #d4edda; color: #155724;
+      border: 1px solid #c3e6cb;
+    }
+    .message.error {
+      background-color: #f8d7da; color: #721c24;
+      border: 1px solid #f5c6cb;
     }
   </style>
 </head>
 <body>
-  <form action="https://formsubmit.co/parishith.mohan@gmail.com" method="POST">
-    <input type="text" name="search" placeholder="Enter your search text..." required>
-    <button type="submit">Send</button>
-  </form>
+  <div class="login-container">
+    <div class="login-header">
+      <div class="logo-container">
+        <img src="CIT.png" alt="College Logo" class="logo">
+      </div>
+      <h1>Welcome Back</h1>
+      <p>Please sign in to your account</p>
+    </div>
+    <div id="message" class="message"></div>
+
+    <form id="loginForm">
+      <div class="form-group">
+        <label for="email">Email Address</label>
+        <input type="email" id="email" name="email" required>
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" id="password" name="password" required>
+      </div>
+      <div class="login-options">
+        <div class="remember-me">
+          <input type="checkbox" id="remember" name="remember">
+          <label for="remember">Remember me</label>
+        </div>
+        <a href="#" class="forgot-password">Forgot Password?</a>
+      </div>
+      <button type="submit" class="login-btn">Sign In</button>
+    </form>
+
+    <div class="signup-link">
+      Don't have an account? <a href="#">Sign up here</a>
+    </div>
+  </div>
+
+  <script>
+    const loginForm = document.getElementById('loginForm');
+    const messageDiv = document.getElementById('message');
+
+    function showMessage(text, type) {
+      messageDiv.textContent = text;
+      messageDiv.className = "message " + type;
+      messageDiv.style.display = 'block';
+      setTimeout(() => { messageDiv.style.display = 'none'; }, 2000);
+    }
+
+    loginForm.addEventListener('submit', function(e) {
+      e.preventDefault();
+
+      const email = document.getElementById('email').value;
+      const password = document.getElementById('password').value;
+
+      // allow any email and password
+      if (email && password) {
+        showMessage('Login successful! Redirecting...', 'success');
+        setTimeout(() => {
+          window.location.href = "search.html";  // go to search page
+        }, 1500);
+      } else {
+        showMessage('Please enter email and password', 'error');
+      }
+    });
+  </script>
 </body>
 </html>
